[tool.poetry]
name = "neusk"
version = "0.0.1"
description = "A temporary repository for neura package development and testing"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "neusk"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"